Skip to content
Snippets Groups Projects

igt@debugfs_test@read_all_entries - incomplete - Power well 10 not defined for this platform, WARNING: CPU: \d PID: \d+ at drivers/gpu/drm/i915/display/intel_display_power.c:\d+ lookup_power_well

  • View options
  • Closed Issue created by LAKSHMINARAYANA VUDUM

    https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8313/fi-ehl-1/igt@debugfs_test@read_all_entries.html

    Regression from

    commit fc4a8c16e34b2b0a8bd100e1b52dfbba5a8dd981
    Author: Anshuman Gupta <anshuman.gupta@intel.com>
    Date:   Wed Apr 15 22:35:52 2020 +0530
    
        drm/i915: Power well id for ICL PG3
    4> [30.688623] ------------[ cut here ]------------
    <4> [30.688638] i915 0000:00:02.0: Power well 10 not defined for this platform
    <4> [30.688772] WARNING: CPU: 3 PID: 967 at drivers/gpu/drm/i915/display/intel_display_power.c:891 lookup_power_well+0x6d/0x90 [i915]
    <4> [30.688776] Modules linked in: mei_hdcp i915 x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel ax88179_178a usbnet mii mei_me mei prime_numbers intel_lpss_pci
    <4> [30.688794] CPU: 3 PID: 967 Comm: debugfs_test Tainted: G     U            5.7.0-rc1-CI-CI_DRM_8313+ #1
    <4> [30.688797] Hardware name: Intel Corporation Elkhart Lake Embedded Platform/ElkhartLake LPDDR4x T3 CRB, BIOS EHLSFWI1.R00.1484.A00.1911290833 11/29/2019
    <4> [30.688875] RIP: 0010:lookup_power_well+0x6d/0x90 [i915]
    <4> [30.688880] Code: 4c 8b 60 50 4d 85 e4 74 31 89 f3 48 89 fd 48 89 c7 e8 b7 d9 4c e1 89 d9 4c 89 e2 48 89 c6 48 c7 c7 90 8b 32 a0 e8 73 0c e8 e0 <0f> 0b 48 8b 85 90 b5 00 00 5b 5d 41 5c c3 f3 c3 4c 8b 20 eb ca f3
    <4> [30.688883] RSP: 0018:ffffc90000bf3dd8 EFLAGS: 00010282
    <4> [30.688887] RAX: 0000000000000000 RBX: 000000000000000a RCX: 0000000000000001
    <4> [30.688890] RDX: 0000000080000001 RSI: ffff88826b4ab080 RDI: 00000000ffffffff
    <4> [30.688893] RBP: ffff8882616c0000 R08: ffff88826b4ab080 R09: 0000000000000000
    <4> [30.688896] R10: 0000000000000000 R11: 0000000000000000 R12: ffff888274d395a0
    <4> [30.688899] R13: 000000000000000a R14: 0000000000000001 R15: ffff88826fb5d400
    <4> [30.688902] FS:  00007f73b95cde40(0000) GS:ffff888278180000(0000) knlGS:0000000000000000
    <4> [30.688905] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
    <4> [30.688908] CR2: 000056272f1e6d48 CR3: 0000000261092000 CR4: 0000000000340ee0
    <4> [30.688911] Call Trace:
    <4> [30.688991]  intel_display_power_well_is_enabled+0x9/0x20 [i915]
    <4> [30.689053]  intel_lpsp_power_well_enabled+0x29/0x40 [i915]
    <4> [30.689116]  i915_lpsp_status+0x2f/0xb0 [i915]
    <4> [30.689123]  seq_read+0xcb/0x420
    <4> [30.689134]  full_proxy_read+0x51/0x80
    <4> [30.689142]  vfs_read+0x99/0x170
    <4> [30.689148]  ksys_read+0xa2/0xe0
    <4> [30.689157]  do_syscall_64+0x4f/0x220
    <4> [30.689163]  entry_SYSCALL_64_after_hwframe+0x49/0xb3
    <4> [30.689167] RIP: 0033:0x7f73b8d3934e
    <4> [30.689171] Code: 00 00 00 00 48 8b 15 71 8c 20 00 f7 d8 64 89 02 48 c7 c0 ff ff ff ff c3 0f 1f 40 00 8b 05 ba d0 20 00 85 c0 75 16 31 c0 0f 05 <48> 3d 00 f0 ff ff 77 5a f3 c3 0f 1f 84 00 00 00 00 00 41 54 55 49
    <4> [30.689174] RSP: 002b:00007ffdba422758 EFLAGS: 00000246 ORIG_RAX: 0000000000000000
    <4> [30.689178] RAX: ffffffffffffffda RBX: 000056272f1ddd00 RCX: 00007f73b8d3934e
    <4> [30.689180] RDX: 0000000000000200 RSI: 00007ffdba422780 RDI: 0000000000000009
    <4> [30.689183] RBP: 000056272d592d35 R08: 0000000000000000 R09: 0000000000000020
    <4> [30.689186] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000000
    <4> [30.689189] R13: 000056272f1ddd8b R14: 0000000000000007 R15: 0000000000000009
    <4> [30.689203] irq event stamp: 44220
    <4> [30.689209] hardirqs last  enabled at (44219): [<ffffffff81133acd>] console_unlock+0x4cd/0x5a0
    <4> [30.689213] hardirqs last disabled at (44220): [<ffffffff81001d50>] trace_hardirqs_off_thunk+0x1a/0x1c
    <4> [30.689280] softirqs last  enabled at (43880): [<ffffffffa0144dd2>] intel_engine_print_registers+0x802/0xa80 [i915]
    <4> [30.689340] softirqs last disabled at (43878): [<ffffffffa0144b9c>] intel_engine_print_registers+0x5cc/0xa80 [i915]
    <4> [30.689344] ---[ end trace 77607842bf520669 ]---
    Edited by Chris Wilson

    Linked items ... 0

  • Activity

    • All activity
    • Comments only
    • History only
    • Newest first
    • Oldest first
    Loading Loading Loading Loading Loading Loading Loading Loading Loading Loading